# mtslearn

./: .gitignore  6MWT_mts_version2.0.xlsx  LICENSE  README.md  User Guide.md  pyproject.toml  requirements.txt  test.ipynb
data/covid19_data/: 375_patients_example.xlsx
mtslearn/: Classifier.py  Processor.py  StaticClassifier.py  Static_Classifier.py  TSClassifier.py  Temporal_Classifier.py  TimeLSTM.py  __init__.py  test.py  utils.py  visualization.py  xgboost.ipynb
mtslearn-new/: TS_table.xlsx  static_table.xlsx  test.ipynb
mtslearn-new/mtslearn/: Processor.py  TimeLSTM.py  __init__.py
mtslearn-new/mtslearn/test_data/: 375_patients_example.xlsx
mtslearn/output/: group_comparison_results.xlsx  selected_columns_correlation.xlsx
output/: TS_table.xlsx  static_table.xlsx
test_data/: 375_patients_example.xlsx
xdl/: 6MWT_mts_version.xlsx
